Allow legend visibility toggling, fix legend icons width

--- a/src/map/components/legend/_map-legend.scss
+++ b/src/map/components/legend/_map-legend.scss
@@ -56,7 +56,6 @@
     height: 16px;
     line-height: 16px;
     margin-left: 10px;
-    overflow: hidden;
     width: 16px;
 
     & + * {
